Добавлена галерея изображений
улучшена связь загружаемых файлов с сущностями
исправлены иконки
улучшена логика сжатия файлов: убран размер отдельный full, файл заменяется или дополняется, файлы приводятся к jpg

другие мелочи

#21

--- a/public/assets/css/atlantis.css
+++ b/public/assets/css/atlantis.css
@@ -6902,6 +6902,7 @@ label.error {
     height: 1.6875rem;
     min-width: 1.6875rem;
     width: 1.6875rem;
+    padding: 5px 0;
 }
 
 /*      Button States      */
