--- a/src/Template/cup/form/view/detail.twig
+++ b/src/Template/cup/form/view/detail.twig
@@ -29,7 +29,7 @@
                     <div class="row">
                         {% for file in files %}
                             <div class="col-sm-6 col-md-3">
-                                <a href="{{ file.getPublicPath('full') }}" class="d-block card card-stats card-round" target="_blank">
+                                <a href="{{ file.getPublicPath() }}" class="d-block card card-stats card-round" target="_blank">
                                     <div class="card-body ">
                                         <div class="row align-items-center">
                                             <div class="col-icon">
