--- a/src/Template/cup/publication/category/form.twig
+++ b/src/Template/cup/publication/category/form.twig
@@ -57,6 +57,10 @@
                                     'name': 'description',
                                     'args': {
                                         'value': item.description
+                                    },
+                                    'options': {
+                                        'item': reference('/App/Domain/Types/FileItemType::ITEM_PUBLICATION'),
+                                        'item_uuid': item.uuid ? item.uuid.toString() : '',
                                     }
                                 } %}
                             </div>
