--- a/src/Template/cup/publication/form.twig
+++ b/src/Template/cup/publication/form.twig
@@ -93,6 +93,10 @@
                                             'name': 'content[short]',
                                             'args': {
                                                 'value': item.content.short
+                                            },
+                                            'options': {
+                                                'item': reference('/App/Domain/Types/FileItemType::ITEM_PUBLICATION'),
+                                                'item_uuid': item.uuid ? item.uuid.toString() : '',
                                             }
                                         } %}
                                     </div>
@@ -104,6 +108,10 @@
                                             'name': 'content[full]',
                                             'args': {
                                                 'value': item.content.full
+                                            },
+                                            'options': {
+                                                'item': reference('/App/Domain/Types/FileItemType::ITEM_PUBLICATION'),
+                                                'item_uuid': item.uuid ? item.uuid.toString() : '',
                                             }
                                         } %}
                                     </div>
@@ -181,7 +189,7 @@
 
                                         {% for file in files %}
                                             <div class="p-2 d-inline-block m-2 bg-grey2 rounded">
-                                                <a href="{{ file.getPublicPath('full') }}" target="_blank">
+                                                <a href="{{ file.getPublicPath() }}" target="_blank">
                                                     <img class="rounded" height="100" src="{{ file.getPublicPath('small') }}" alt="preview" data-toggle="tooltip" data-placement="top" title="{{ file.getName() }}" />
                                                 </a>
                                                 <div class="pt-2">
