--- a/src/Template/cup/quickaction.twig
+++ b/src/Template/cup/quickaction.twig
@@ -11,19 +11,19 @@
                 <form action="/cup/task/run" method="post" class="row m-0">
                     <button type="submit" name="task" value="App\Domain\Tasks\Generate\YMLTask" class="col-12 col-md-6 p-0 btn btn-link">
                         <div class="quick-actions-item">
-                            <i class="fas fa-dice-d6"></i>
+                            <i class="fas fa-file-alt"></i>
                             <span class="text">Генерация YML</span>
                         </div>
                     </button>
                     <button type="submit" name="task" value="App\Domain\Tasks\Generate\GMFTask" class="col-12 col-md-6 p-0 btn btn-link">
                         <div class="quick-actions-item">
-                            <i class="fas fa-dice-d6"></i>
+                            <i class="fas fa-file-alt"></i>
                             <span class="text">Генерация GMF</span>
                         </div>
                     </button>
                     <button type="submit" name="task" value="App\Domain\Tasks\Generate\SiteMapTask" class="col-12 col-md-6 p-0 btn btn-link">
                         <div class="quick-actions-item">
-                            <i class="fas fa-dice-d6"></i>
+                            <i class="fas fa-file-alt"></i>
                             <span class="text">Генерация SiteMap</span>
                         </div>
                     </button>
