вернул скрипты потерянные

--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -315,4 +315,6 @@
     <script src="/assets/js/cup/script.js"></script>
 
     {% include 'mixin/pushstream.twig' %}
+
+    {% block script '' %}
 {% endblock %}
