--- a/src/Template/cup/user/form.twig
+++ b/src/Template/cup/user/form.twig
@@ -125,9 +125,9 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="card-action">
-                        <button type="submit" name="save" value="exit" class="btn btn-primary">Сохранить и выйти</button>
-                        <button type="submit" name="save" class="btn btn-info">Сохранить</button>
+                        {% include "cup/form-save.twig" %}
                     </div>
                 </form>
             </div>
