--- a/src/Template/cup/form/index.twig
+++ b/src/Template/cup/form/index.twig
@@ -64,27 +64,27 @@
                                         </td>
                                         <td class="text-center">
                                             <div class="btn-group dropdown">
-                                                <a href="/cup/form/{{ item.uuid }}/view" class="btn btn-outline-info btn-sm">
-                                                    <i class="fas fa-eye fa-lg"></i>
-                                                </a>
-                                                <div class="btn-group dropdown">
-                                                    <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
-                                                        <i class="fas fa-bars"></i>
-                                                    </button>
-                                                    <ul class="dropdown-menu" role="menu">
-                                                        <li>
-                                                            <a href="/cup/form/{{ item.uuid }}/edit" class="btn btn-link"><i class="fas fa-edit"></i> Изменить</a>
-                                                        </li>
-                                                        <li><div class="dropdown-divider"></div></li>
-                                                        <li>
-                                                            <form action="/cup/form/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить форму?');">
-                                                                <button type="submit" class="btn btn-link text-danger">
-                                                                    <i class="fas fa-trash-alt"></i> Удалить
-                                                                </button>
-                                                            </form>
-                                                        </li>
-                                                    </ul>
-                                                </div>
+                                                <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                                                    <i class="fas fa-bars"></i>
+                                                </button>
+                                                <ul class="dropdown-menu" role="menu">
+                                                    <li>
+                                                        <a href="/cup/form/{{ item.uuid }}/view" class="btn btn-link">
+                                                            <i class="fas fa-eye"></i> Заявки
+                                                        </a>
+                                                    </li>
+                                                    <li>
+                                                        <a href="/cup/form/{{ item.uuid }}/edit" class="btn btn-link"><i class="fas fa-edit"></i> Изменить</a>
+                                                    </li>
+                                                    <li><div class="dropdown-divider"></div></li>
+                                                    <li>
+                                                        <form action="/cup/form/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить форму?');">
+                                                            <button type="submit" class="btn btn-link text-danger">
+                                                                <i class="fas fa-trash-alt"></i> Удалить
+                                                            </button>
+                                                        </form>
+                                                    </li>
+                                                </ul>
                                             </div>
                                         </td>
                                     </tr>
