--- a/src/Template/cup/publication/form.twig
+++ b/src/Template/cup/publication/form.twig
@@ -244,8 +244,7 @@
                         </div>
                     </div>
                     <div class="card-action">
-                        <button type="submit" name="save" value="exit" class="btn btn-primary">Сохранить и выйти</button>
-                        <button type="submit" name="save" class="btn btn-info">Сохранить</button>
+                        {% include "cup/form-save.twig" %}
 
                         <button type="button" data-click="preview" class="btn btn-info float-right">Предварительный просмотр</button>
                     </div>
