исправлена конвертация изображений и плейсхолдеры

--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -219,7 +219,7 @@
                                     'type': 'number',
                                     'name': 'image[convert_size_small]',
                                     'args': {
-                                        'placeholder': 'my.site@company.com',
+                                        'placeholder': '200',
                                         'value': '200'
                                     }
                                 } %}
@@ -230,7 +230,7 @@
                                     'type': 'number',
                                     'name': 'image[convert_size_middle]',
                                     'args': {
-                                        'placeholder': 'my.site@company.com',
+                                        'placeholder': '450',
                                         'value': '450'
                                     }
                                 } %}
