--- a/src/Template/cup/form/index.twig
+++ b/src/Template/cup/form/index.twig
@@ -69,9 +69,7 @@
                                                 </button>
                                                 <ul class="dropdown-menu" role="menu">
                                                     <li>
-                                                        <a href="/cup/form/{{ item.uuid }}/view" class="btn btn-link">
-                                                            <i class="fas fa-eye"></i> Заявки
-                                                        </a>
+                                                        <a href="/cup/form/{{ item.uuid }}/view" class="btn btn-link"><i class="fas fa-eye"></i> Заявки</a>
                                                     </li>
                                                     <li>
                                                         <a href="/cup/form/{{ item.uuid }}/edit" class="btn btn-link"><i class="fas fa-edit"></i> Изменить</a>
