убраны значения индивидуальных полей по-умолчанию

--- a/src/Template/cup/catalog/category/form.twig
+++ b/src/Template/cup/catalog/category/form.twig
@@ -178,7 +178,7 @@
                                             'name': 'product[field_1]',
                                             'message': 'Индивидуальное поле продукта категории',
                                             'args': {
-                                                'value': item.product.field_1 is not empty ? item.product.field_1 : 'Поле 1',
+                                                'value': item.product.field_1 is not empty ? item.product.field_1 : '',
                                                 'placeholder': 'Поле 1',
                                             }
                                         } %}
@@ -190,7 +190,7 @@
                                             'name': 'product[field_2]',
                                             'message': 'Индивидуальное поле продукта категории',
                                             'args': {
-                                                'value': item.product.field_2 is not empty ? item.product.field_2 : 'Поле 2',
+                                                'value': item.product.field_2 is not empty ? item.product.field_2 : '',
                                                 'placeholder': 'Поле 2',
                                             }
                                         } %}
@@ -202,7 +202,7 @@
                                             'name': 'product[field_3]',
                                             'message': 'Индивидуальное поле продукта категории',
                                             'args': {
-                                                'value': item.product.field_3 is not empty ? item.product.field_3 : 'Поле 3',
+                                                'value': item.product.field_3 is not empty ? item.product.field_3 : '',
                                                 'placeholder': 'Поле 3',
                                             }
                                         } %}
@@ -214,7 +214,7 @@
                                             'name': 'product[field_4]',
                                             'message': 'Индивидуальное поле продукта категории',
                                             'args': {
-                                                'value': item.product.field_4 is not empty ? item.product.field_4 : 'Поле 4',
+                                                'value': item.product.field_4 is not empty ? item.product.field_4 : '',
                                                 'placeholder': 'Поле 4',
                                             }
                                         } %}
@@ -226,7 +226,7 @@
                                             'name': 'product[field_5]',
                                             'message': 'Индивидуальное поле продукта категории',
                                             'args': {
-                                                'value': item.product.field_5 is not empty ? item.product.field_5 : 'Поле 5',
+                                                'value': item.product.field_5 is not empty ? item.product.field_5 : '',
                                                 'placeholder': 'Поле 5',
                                             }
                                         } %}
