исправление ключевые слова

--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -84,8 +84,8 @@
                                         } %}
 
                                         {% include 'cup/field.twig' with {
-                                            'label': 'Описание (Description) сайта',
-                                            'description': 'Краткое описание, не более 200 символов',
+                                            'label': 'Ключевые (Keywords) слова',
+                                            'description': 'Через запятую',
                                             'type': 'textarea',
                                             'name': 'common[keywords]',
                                         } %}
