--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -385,6 +385,16 @@
                                 } %}
 
                                 {% include 'cup/field.twig' with {
+                                    'label': 'Автоматически генерировать адреса',
+                                    'description': 'Адреса для категорий каталога и единиц номенклатуры будут сгенерированы автоматически при создании',
+                                    'type': 'select',
+                                    'name': 'catalog[auto_generate_address]',
+                                    'args': {
+                                        'option': {'yes':'Да', 'no':'Нет'}
+                                    }
+                                } %}
+
+                                {% include 'cup/field.twig' with {
                                     'label': 'Шаблон раздела',
                                     'description': 'Значение по-умолчанию, так же это значение будет использовано для главной страницы каталога',
                                     'type': 'text',
