--- a/theme/default/catalog.cart.twig
+++ b/theme/default/catalog.cart.twig
@@ -38,6 +38,16 @@
             text-align: center;
         }
 
+        [data-catalog-cart] td {
+            vertical-align: middle;
+        }
+        [data-catalog-cart] img {
+            width: 70px;
+            height: 70px;
+            object-fit: contain;
+            object-position: center center;
+        }
+
         [data-catalog-cart-data].check-error {
             border: 1px solid #f51167;
         }
